<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_status_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:chipSpacing="20dp"
        app:singleLine="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_dead_main"
            style="@style/chip_style"
            android:text="@string/simple_dead"
            app:chipIcon="@drawable/ic_dead" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_alive_main"
            style="@style/chip_style"
            android:text="@string/simple_alive"
            app:chipIcon="@drawable/ic_live" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_unknow_main"
            style="@style/chip_style"
            android:text="@string/simple_wanted"
            app:chipIcon="@drawable/ic_wanted" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_gender_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:chipSpacing="20dp"
        app:singleLine="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_gender_male_main"
            style="@style/chip_style"
            android:text="@string/simple_male"
            app:chipIcon="@drawable/ic_male" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_gender_female_main"
            style="@style/chip_style"
            android:text="@string/simple_female"
            app:chipIcon="@drawable/ic_female" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_gender_unknow_main"
            style="@style/chip_style"
            android:text="@string/simple_indeterminado"
            app:chipIcon="@drawable/ic_question_mark" />
    </com.google.android.material.chip.ChipGroup>
</LinearLayout>
</layout>